Add some initial optimization flags